--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -196,7 +196,7 @@
     <div class="alert alert-danger"
     *ngIf="phone.touched &&!phone.valid">
     <div *ngIf="phone.errors?.['required']">
-      Zip code is required</div> 
+      City is required</div> 
     <div *ngIf="phone.errors?.['pattern']">
       City is formatted wrong</div>
       <div *ngIf="phone.errors?.['minlength']">
