--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,50 +1,16 @@
-<!-- <form #f="ngForm">
-    <h1> Registration Form</h1>
-   
-        <div class="form-floating mb-3">
-            <input type="text" required minlength="2" pattern="[a-zA-Z]+" id="FirstNameBox" ngModel name="firstname" 
-            #firstName="ngModel" class="form-control" placeholder="First Name" autofocus="true">
-            <label for="FirstNameBox">First Name</label>
-        </div>
-
-     <div class="form-floating mb-3">
-        <input type="text" required minlength="2" pattern="[a-zA-Z]+" id="LastNameBox" ngModel name="lastname" 
-        #lastName="ngModel" class="form-control" placeholder="Last Name" autofocus="true">
-        <label for="LastNameBox">Last Name</label>
-    </div>
-
-    <div class="form-floating mb-3">
-        <input type="text" required minlength="2" pattern="[a-z0-9]+@[a-z]+\.[a-z]{2,3}" id="EmailBox" ngModel name="email" 
-        #email="ngModel" class="form-control" placeholder="email" autofocus="true">
-        <label for="EmailBox">Email</label>
-    </div>
- 
-    <div class="form-floating mb-3">
-        <input type="text" required minlength="6"  id="PasswordBox" ngModel name="password" 
-        #password="ngModel" class="form-control" placeholder="password" autofocus="true" input type="password">
-        <label for="PasswordBox">Password</label>
-    </div>
-  
-    <div class="form-floating mb-3">
-        <input type="text" required minlength="10"  id="PhoneNumber" ngModel name="Phonenumber" 
-        #phonenumber="ngModel" class="form-control" placeholder="Phonenumber" autofocus="true">
-        <label for="PhoneNumber">PhoneNumber</label>
-    </div>
-
-
-<div class="row justify-content-center">
-<button type="submit" routerLink="/about" class="btn btn-primary" [disabled]="!f.valid" (click)="onClick(f.value)"
-[state]="{fname: f.value.firstname, lname: f.value.lastname, email: f.value.email}"> Submit</button>
-</div>
-</form> -->
-
+      <br>
+      <br>
 <form #f="ngForm">
+  <!-- Name on Card -->
     <h1>Enter your credit card information</h1>
       <div class="form-floating mb-3">
-        <input type="text" required minlength="2" maxlength= "255" pattern="[a-zA-Z\s]+"
-        id="CardNameBox" ngModel name="CardNameBox" #CardNameBox="ngModel"
-        class="form-control" placeholder="Card name" autofocus="true">
-        <label for="CardNameBox">Name on card<span style="color:red;"> *</span></label>
+        <input type="text" required minlength="2" 
+        maxlength= "255" pattern="[a-zA-Z\s]+"
+        id="CardNameBox" ngModel name="CardNameBox" 
+        #CardNameBox="ngModel" class="form-control" 
+        placeholder="Card name" autofocus="true">
+        <label for="CardNameBox">
+          Name on card<span style="color:red;"> *</span></label>
       </div>
     
       <div class="alert alert-danger"
@@ -58,10 +24,15 @@
     </div>
     
     <div class="form-floating mb-3">
-      <input type="text" required minlength="15" maxlength= "16" pattern="[0-9]+"
-      id="CardNumberBox" name="CardNumberBox" #CardNumberBox="ngModel"
-      class="form-control" placeholder="Last name" [(ngModel)]="data.cardNumber">
-      <label for="CardNumberBox">Card number<span style="color:red;"> *</span></label>
+        <!-- Card number-->
+      <input type="text" required minlength="15" 
+      maxlength= "16" pattern="[0-9]+"
+      id="CardNumberBox" name="CardNumberBox" 
+      #CardNumberBox="ngModel"
+      class="form-control" placeholder="Card Number" 
+      [(ngModel)]="data.cardNumber">
+      <label for="CardNumberBox">
+        Card number<span style="color:red;"> *</span></label>
     </div>
     
     <div class="alert alert-danger"
@@ -80,24 +51,35 @@
     <br>
     <div class = "row g-2">
 <div class="col">
-    <select class="form-select" id = "formselect1" aria-label="Default select example" ngModel name="department">
-      <option selected="selected" disabled value="">1</option>
-      <option *ngFor="let department of getAllDepartments()" value="{{department}}">{{department}}</option>
+
+    <!-- Expiration Date -->
+    <select class="form-select" id = "formselect1" 
+    aria-label="Default select example" ngModel name="ExpDateMonth">
+      <option selected="selected" value="">Month</option>
+      <option *ngFor="let months of getAllMonths()" 
+      value="{{months}}">{{months}}</option>
     </select>
     </div>
+
     <div class="col">
-    <select class="form-select" id = "formselect1" aria-label="Default select example" ngModel name="department">
-      <option selected="selected" disabled value="">2023</option>
-      <option *ngFor="let department of getAllDepartments2()" value="{{department}}">{{department}}</option>
+    <select class="form-select" id = "formselect1" 
+    aria-label="Default select example" ngModel name="ExpDateYear">
+      <option selected="selected" value="">Year</option>
+      <option *ngFor="let years of getAllYears()" 
+      value="{{years}}">{{years}}</option>
     </select>
   </div>
 
   <div class="col">
   <div class="form-floating mb-3">
-    <input type="text" required minlength="3" maxlength ="4" pattern="[0-9]+"
-    id="SecurityBox" ngModel name="SecurityBox" #SecurityBox="ngModel"
-    class="form-control" placeholder="Email Address">
-    <label for="SecurityBox">Security Code<span style="color:red;"> *</span></label>
+      <!-- Security Code -->
+    <input type="text" required minlength="3"
+     maxlength ="4" pattern="[0-9]+"
+    id="SecurityBox" ngModel name="SecurityBox" 
+    #SecurityBox="ngModel"
+    class="form-control" placeholder="Security Code">
+    <label for="SecurityBox">
+      Security Code<span style="color:red;"> *</span></label>
   </div>
   </div>
   
@@ -116,10 +98,14 @@
     <h1>Enter your billing address</h1>
 
     <div class="form-floating mb-3">
-      <input type="text" required minlength="2" maxlength="255" pattern="[a-zA-z\s]+"
-      id="FullNameBox" ngModel name="FullNameBox" #FullNameBox="ngModel"
-      class="form-control" placeholder="Email Address">
-      <label for="FullNameBox">Full Name<span style="color:red;"> *</span></label>
+        <!-- Full Name -->
+      <input type="text" required minlength="2" 
+      maxlength="255" pattern="[a-zA-z\s]+"
+      id="FullNameBox" ngModel name="FullNameBox" 
+      #FullNameBox="ngModel" class="form-control" 
+      placeholder="FullNameBox">
+      <label for="FullNameBox">Full Name
+        <span style="color:red;"> *</span></label>
     </div>
     
     <div class="alert alert-danger"
@@ -133,10 +119,14 @@
     </div>
 
     <div class="form-floating mb-3">
-      <input type="text" required minlength="2" maxlength="255" pattern="[a-zA-Z0-9\s]+"
-      id="StreetBox" ngModel name="StreetBox" #StreetBox="ngModel"
+        <!-- Street Address-->
+      <input type="text" required minlength="2"
+       maxlength="255" pattern="[a-zA-Z0-9\s]+"
+      id="StreetBox" ngModel name="StreetBox" 
+      #StreetBox="ngModel"
       class="form-control" placeholder="Email Address">
-      <label for="StreetBox">Street address<span style="color:red;"> *</span></label>
+      <label for="StreetBox">
+        Street address <span style="color:red;"> *</span></label>
     </div>
     
     <div class="alert alert-danger"
@@ -150,36 +140,43 @@
     </div>
 
     <div class="form-floating mb-3">
-      <input type="text" minlength="2" maxlength="50" pattern="[a-z0-9A-Z\s]+"
-      id="EmailBox" ngModel name="email" #email="ngModel"
-      class="form-control" placeholder="Email Address">
-      <label for="EmailBox">Apt/Suite/Other</label>
+        <!-- Apt/ Suite -->
+      <input type="text" minlength="2" 
+      maxlength="50" pattern="[a-z0-9A-Z\s]+"
+      id="AptorSuite" ngModel name="AptorSuite" #AptorSuite="ngModel"
+      class="form-control" placeholder="AptorSuite">
+      <label for="AptorSuite">Apt/Suite/Other</label>
     </div>
     
     <div class="alert alert-danger"
-    *ngIf="email.touched &&!email.valid">
-    <div *ngIf="email.errors?.['pattern']">
+    *ngIf="AptorSuite.touched &&!AptorSuite.valid">
+    <div *ngIf="AptorSuite.errors?.['pattern']">
       apt is formatted incorrectly</div>
-      <div *ngIf="email.errors?.['minlength']">
+      <div *ngIf="AptorSuite.errors?.['minlength']">
         apt must be 2 characters</div>
     </div>
     
     <div class = "row g-2">
       <div class="col-md">
     <div class="form-floating mb-3">
-      <input type="text" required minlength="5" maxlength="5" pattern="[0-9]+"
-      id="PasswordBox" ngModel name="password" #password="ngModel"
-      class="form-control" placeholder="Password" input type="text">
-      <label for="PasswordBox">Zip Code<span style="color:red;"> *</span></label>
+        <!-- Zipcode -->
+      <input type="text" required minlength="5"
+       maxlength="5" pattern="[0-9]+"
+      id="Zipcode" ngModel name="Zipcode" 
+      #Zipcode="ngModel"
+      class="form-control" placeholder="Zipcode"
+       input type="text">
+      <label for="Zipcode">Zip Code
+        <span style="color:red;"> *</span></label>
     </div>
     
     <div class="alert alert-danger"
-    *ngIf="password.touched &&!password.valid">
-    <div *ngIf="password.errors?.['required']">
+    *ngIf="Zipcode.touched &&!Zipcode.valid">
+    <div *ngIf="Zipcode.errors?.['required']">
     Zip code is required</div> 
-    <div *ngIf="password.errors?.['pattern']">
+    <div *ngIf="Zipcode.errors?.['pattern']">
       Zip must only be numbers</div>
-      <div *ngIf="password.errors?.['minlength']">
+      <div *ngIf="Zipcode.errors?.['minlength']">
         Zip must be 5 characters</div>
     </div>
       </div>
@@ -187,40 +184,45 @@
       
       <div class="col-md">
     <div class="form-floating mb-3">
-      <input appPhone type="text" required minlength="3" maxlength="50" pattern="[a-zA-z\s]+"
-      id="PhoneNumBox" ngModel name="phone" #phone="ngModel"
-      class="form-control" placeholder="Phone Number">
-      <label for="PhoneNumBox">City<span style="color:red;"> *</span></label>
+        <!-- City -->
+      <input type="text" required minlength="3" 
+      maxlength="50" pattern="[a-zA-z\s]+"
+      id="City" ngModel name="City" #City="ngModel"
+      class="form-control" placeholder="City">
+      <label for="City">
+        City<span style="color:red;"> *</span></label>
     </div>
     
     <div class="alert alert-danger"
-    *ngIf="phone.touched &&!phone.valid">
-    <div *ngIf="phone.errors?.['required']">
+    *ngIf="City.touched &&!City.valid">
+    <div *ngIf="City.errors?.['required']">
       City is required</div> 
-    <div *ngIf="phone.errors?.['pattern']">
+    <div *ngIf="City.errors?.['pattern']">
       City is formatted wrong</div>
-      <div *ngIf="phone.errors?.['minlength']">
+      <div *ngIf="City.errors?.['minlength']">
         City is not long enough</div>
     </div>
       </div>
     </div>
     
     <div class="form-floating mb-3">
-        <select class="form-select" id = "formselect1" aria-label="Default select example" ngModel name="phone">
-            <option selected="selected" disabled value="">State</option>
-            <option *ngFor="let department of getAllStates()" value="{{department}}">{{department}}</option>
+       <!-- State -->
+        <select class="form-select" id = "State" 
+        aria-label="Default select example" ngModel name="State">
+            <option selected="selected" value="">State</option>
+            <option *ngFor="let states of getAllStates()" 
+            value="{{states}}">{{states}}</option>
           </select>
     </div>
     <br>
     
     <div class="row justify-content-center">
     <button type="submit" class="btn btn-primary"
-      [disabled]="!f.valid" onclick="wndow.location.reload();">Make Purchase</button>
+      [disabled]="!f.valid" onclick="window.location.reload();">
+      Make Purchase</button>
     </div>
-     
-    <p>{{allInfo}}</p>
-    <p>{{allInfo2}}</p>
-    <!--
-     <input type="text" appFormatInput>       -->
-     <!--TODO : FINISH ADDING FIELDS, MAKE FIELDS SAME AS DOCUMENT-->
       </form>
+
+      <br>
+      <br>
+      <br>
