--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,19 +13,25 @@
     >
       <i class="fas fa-bars"></i>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
+    <div class="collapse navbar-collapse"
+     id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item" >
-          <a class="nav-link active" aria-current="page" routerLink="/" routerLinkActive="myactivelink">Home</a>
+          <a class="nav-link active" aria-current="page" 
+          routerLink="/" 
+            routerLinkActive="myactivelink">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/signup" routerLinkActive="myactivelink">Sign Up</a>
+          <a class="nav-link" routerLink="/signup" 
+            routerLinkActive="myactivelink">Sign Up</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/about" routerLinkActive="myactivelink">About</a>
+          <a class="nav-link" routerLink="/about" 
+           routerLinkActive="myactivelink">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/members" routerLinkActive="myactivelink">Members</a>
+          <a class="nav-link" routerLink="/members"
+           routerLinkActive="myactivelink">Members</a>
         </li>
       </ul>
     </div>
