--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,225 +1,250 @@
       <br>
       <br>
-<form #f="ngForm">
-  <!-- Name on Card -->
-    <h1>Enter your credit card information</h1>
-      <div class="form-floating mb-3">
-        <input type="text" required minlength="2" 
-        maxlength= "255" pattern="[a-zA-Z\s]+"
-        id="CardNameBox" ngModel name="CardNameBox" 
-        #CardNameBox="ngModel" class="form-control" 
-        placeholder="Card name" autofocus="true">
-        <label for="CardNameBox">
-          Name on card<span style="color:red;"> *</span></label>
-      </div>
-    
-      <div class="alert alert-danger"
-      *ngIf="CardNameBox.touched &&!CardNameBox.valid">
-    <div *ngIf="CardNameBox.errors?.['required']">
-      Name is required</div>
-      <div *ngIf="CardNameBox.errors?.['pattern']">
-        Name must only be letters</div>
-        <div *ngIf="CardNameBox.errors?.['minlength']">
-          Name must be at least 2 characters</div>
-    </div>
-    
-    <div class="form-floating mb-3">
-        <!-- Card number-->
-      <input type="text" required minlength="15" 
-      maxlength= "16" pattern="[0-9]+"
-      id="CardNumberBox" name="CardNumberBox" ngModel
-      #CardNumberBox="ngModel"
-      class="form-control" placeholder="Card Number" >
-      <label for="CardNumberBox">
-        Card number<span style="color:red;"> *</span></label>
-    </div>
-    
-    <div class="alert alert-danger"
-    *ngIf="CardNumberBox.touched &&!CardNumberBox.valid">
-    <div *ngIf="CardNumberBox.errors?.['required']">
-    Card number is required</div>
-    <div *ngIf="CardNumberBox.errors?.['pattern']">
-      Card number must only be numbers</div>
-      <div *ngIf="CardNumberBox.errors?.['minlength']">
-        Card number must be at least 15 characters</div>
-        <div *ngIf="CardNumberBox.errors?.['maxlength']">
+      <form #f="ngForm">
+        <!-- Name on Card -->
+        <h1>Enter your credit card information</h1>
+        <br>
+        <div class="form-floating mb-3">
+          <input type="text" required minlength="1"
+           maxlength="255" pattern="[a-zA-Z\s]+" 
+           id="cardNameBox" ngModel
+            name="cardNameBox" #cardNameBox="ngModel"
+            class="form-control" placeholder="Card name" 
+            autofocus="true"> <label for="cardNameBox">
+            Name on card<span style="color:red;"> *</span></label>
+        </div>
+
+        <div class="alert alert-danger" 
+        *ngIf="cardNameBox.touched &&!cardNameBox.valid">
+          <div *ngIf="cardNameBox.errors?.['required']">
+            Name is required</div>
+          <div *ngIf="cardNameBox.errors?.['pattern']">
+            Name must only be letters</div>
+          <div *ngIf="cardNameBox.errors?.['minlength']">
+            Name must be at least 1 character long</div>
+        </div>
+
+        <div class="form-floating mb-3">
+          <!-- Card number-->
+          <input type="text" required minlength="15" 
+          maxlength="16" pattern="[0-9]+" 
+          id="cardNumberBox"
+            name="cardNumberBox" ngModel 
+            #cardNumberBox="ngModel" class="form-control" 
+            placeholder="Card Number">
+          <label for="cardNumberBox">
+            Card number<span style="color:red;"> *
+            </span></label>
+        </div>
+
+        <div class="alert alert-danger" 
+        *ngIf="cardNumberBox.touched &&!cardNumberBox.valid">
+          <div *ngIf="cardNumberBox.errors?.['required']">
+            Card number is required</div>
+          <div *ngIf="cardNumberBox.errors?.['pattern']">
+            Card number must only be numbers</div>
+          <div *ngIf="cardNumberBox.errors?.['minlength']">
+            Card number must be at least 15 characters</div>
+          <div *ngIf="cardNumberBox.errors?.['maxlength']">
             Card number can not exceed 16 numbers</div>
-    </div>
+        </div>
 
-    Expiration date:
-    <br>
-    <div class = "row g-2">
-<div class="col">
+        Expiration date:
+        <br>
+        <div class="row g-2">
+          <div class="col">
 
-    <!-- Expiration Date -->
-    <select class="form-select" id = "formselect1" 
-    aria-label="Default select example" ngModel name="ExpDateMonth">
-      <option selected="selected" value="">Month</option>
-      <option *ngFor="let months of getAllMonths()" 
-      value="{{months}}">{{months}}</option>
-    </select>
-    </div>
+            <!-- Expiration Date -->
+            <select class="form-select" required 
+            id="formselect1" 
+            aria-label="Default select example" ngModel
+              name="expDateMonth">
+              <option selected="selected" 
+              value="">Month</option>
+              <option 
+              *ngFor="let months of GetAllMonths()" 
+              value="{{months}}">{{months}}</option>
+            </select>
+          </div>
 
-    <div class="col">
-    <select class="form-select" id = "formselect1" 
-    aria-label="Default select example" ngModel name="ExpDateYear">
-      <option selected="selected" value="">Year</option>
-      <option *ngFor="let years of getAllYears()" 
-      value="{{years}}">{{years}}</option>
-    </select>
-  </div>
+          <div class="col">
+            <select class="form-select" required 
+            id="formselect1" 
+            aria-label="Default select example" ngModel
+              name="expDateYear">
+              <option selected="selected" 
+              value="">Year</option>
+              <option *ngFor="let years of GetAllYears()" 
+              value="{{years}}">{{years}}</option>
+            </select>
+          </div>
+          <div class="col">
+            <div class="form-floating mb-3">
 
-  <div class="col">
-  <div class="form-floating mb-3">
-      <!-- Security Code -->
-    <input type="text" required minlength="3"
-     maxlength ="4" pattern="[0-9]+"
-    id="SecurityBox" ngModel name="SecurityBox" 
-    #SecurityBox="ngModel"
-    class="form-control" placeholder="Security Code">
-    <label for="SecurityBox">
-      Security Code<span style="color:red;"> *</span></label>
-  </div>
-  </div>
-  
-  <div class="alert alert-danger"
-  *ngIf="SecurityBox.touched &&!SecurityBox.valid">
-  <div *ngIf="SecurityBox.errors?.['required']">
-  Security code is required</div>
-  <div *ngIf="SecurityBox.errors?.['pattern']">
-    Security code must be numbers</div>
-    <div *ngIf="SecurityBox.errors?.['minlength']">
-      Security code must be at least 3 characters</div>
-  </div>
+              <!-- Security Code -->
+              <input type="text" required 
+              minlength="3" maxlength="4" 
+              pattern="[0-9]+" id="securityBox" 
+              ngModel name="securityBox" 
+              #securityBox="ngModel" 
+              class="form-control" 
+              placeholder="Security Code">
+              <label for="securityBox">
+                Security Code<span style="color:red;"> *
+                </span></label>
+            </div>
+          </div>
 
-  </div>
-    <br>
-    <h1>Enter your billing address</h1>
+          <div class="alert alert-danger" 
+          *ngIf="securityBox.touched &&!securityBox.valid">
+            <div *ngIf="securityBox.errors?.['required']">
+              Security code is required</div>
+            <div *ngIf="securityBox.errors?.['pattern']">
+              Security code must be numbers</div>
+            <div *ngIf="securityBox.errors?.['minlength']">
+              Security code must be at least 3 characters</div>
+          </div>
 
-    <div class="form-floating mb-3">
-        <!-- Full Name -->
-      <input type="text" required minlength="2" 
-      maxlength="255" pattern="[a-zA-z\s]+"
-      id="FullNameBox" ngModel name="FullNameBox" 
-      #FullNameBox="ngModel" class="form-control" 
-      placeholder="FullNameBox">
-      <label for="FullNameBox">Full Name
-        <span style="color:red;"> *</span></label>
-    </div>
-    
-    <div class="alert alert-danger"
-    *ngIf="FullNameBox.touched &&!FullNameBox.valid">
-    <div *ngIf="FullNameBox.errors?.['required']">
-    Full name is required</div>
-    <div *ngIf="FullNameBox.errors?.['pattern']">
-      Full Name must be letters only</div>
-      <div *ngIf="FullNameBox.errors?.['minlength']">
-        Full name must be at least 2 characters</div>
-    </div>
+        </div>
+        <br>
+        <h1>Enter your billing address</h1>
+        <br>
+        <div class="form-floating mb-3">
+          <!-- Full Name -->
+          <input type="text" required minlength="1" 
+          maxlength="255" pattern="[a-zA-z\s]+" 
+          id="fullNameBox" ngModel
+            name="fullNameBox" 
+            #fullNameBox="ngModel" 
+            class="form-control" 
+            placeholder="fullNameBox">
+          <label for="fullNameBox">Full Name
+            <span style="color:red;"> *
+            </span></label>
+        </div>
 
-    <div class="form-floating mb-3">
-        <!-- Street Address-->
-      <input type="text" required minlength="2"
-       maxlength="255" pattern="[a-zA-Z0-9\s]+"
-      id="StreetBox" ngModel name="StreetBox" 
-      #StreetBox="ngModel"
-      class="form-control" placeholder="Email Address">
-      <label for="StreetBox">
-        Street address <span style="color:red;"> *</span></label>
-    </div>
-    
-    <div class="alert alert-danger"
-    *ngIf="StreetBox.touched &&!StreetBox.valid">
-    <div *ngIf="StreetBox.errors?.['required']">
-    Street address is required</div>
-    <div *ngIf="StreetBox.errors?.['pattern']">
-      Street address is formatted incorrectly</div>
-      <div *ngIf="StreetBox.errors?.['minlength']">
-        Street address must be at least 2 characters</div>
-    </div>
+        <div class="alert alert-danger" 
+        *ngIf="fullNameBox.touched &&!fullNameBox.valid">
+          <div *ngIf="fullNameBox.errors?.['required']">
+            Full name is required</div>
+          <div *ngIf="fullNameBox.errors?.['pattern']">
+            Full Name must be letters only</div>
+          <div *ngIf="fullNameBox.errors?.['minlength']">
+            Full name must be at least 1 character long</div>
+        </div>
 
-    <div class="form-floating mb-3">
-        <!-- Apt/ Suite -->
-      <input type="text" minlength="2" 
-      maxlength="50" pattern="[a-z0-9A-Z\s]+"
-      id="AptorSuite" ngModel name="AptorSuite" #AptorSuite="ngModel"
-      class="form-control" placeholder="AptorSuite">
-      <label for="AptorSuite">Apt/Suite/Other</label>
-    </div>
-    
-    <div class="alert alert-danger"
-    *ngIf="AptorSuite.touched &&!AptorSuite.valid">
-    <div *ngIf="AptorSuite.errors?.['pattern']">
-      apt is formatted incorrectly</div>
-      <div *ngIf="AptorSuite.errors?.['minlength']">
-        apt must be 2 characters</div>
-    </div>
-    
-    <div class = "row g-2">
-      <div class="col-md">
-    <div class="form-floating mb-3">
-        <!-- Zipcode -->
-      <input type="text" required minlength="5"
-       maxlength="5" pattern="[0-9]+"
-      id="Zipcode" ngModel name="Zipcode" 
-      #Zipcode="ngModel"
-      class="form-control" placeholder="Zipcode"
-       input type="text">
-      <label for="Zipcode">Zip Code
-        <span style="color:red;"> *</span></label>
-    </div>
-    
-    <div class="alert alert-danger"
-    *ngIf="Zipcode.touched &&!Zipcode.valid">
-    <div *ngIf="Zipcode.errors?.['required']">
-    Zip code is required</div> 
-    <div *ngIf="Zipcode.errors?.['pattern']">
-      Zip must only be numbers</div>
-      <div *ngIf="Zipcode.errors?.['minlength']">
-        Zip must be 5 characters</div>
-    </div>
-      </div>
+        <div class="form-floating mb-3">
+          <!-- Street Address-->
+          <input type="text" required 
+          minlength="1" maxlength="255" 
+          pattern="[a-zA-Z0-9\s]+" id="streetBox" 
+          ngModel name="streetBox" 
+          #streetBox="ngModel" class="form-control" 
+          placeholder="Email Address">
+          <label for="streetBox">
+            Street address 
+            <span style="color:red;"> *</span></label>
+        </div>
 
-      
-      <div class="col-md">
-    <div class="form-floating mb-3">
-        <!-- City -->
-      <input type="text" required minlength="3" 
-      maxlength="50" pattern="[a-zA-z\s]+"
-      id="City" ngModel name="City" #City="ngModel"
-      class="form-control" placeholder="City">
-      <label for="City">
-        City<span style="color:red;"> *</span></label>
-    </div>
-    
-    <div class="alert alert-danger"
-    *ngIf="City.touched &&!City.valid">
-    <div *ngIf="City.errors?.['required']">
-      City is required</div> 
-    <div *ngIf="City.errors?.['pattern']">
-      City is formatted wrong</div>
-      <div *ngIf="City.errors?.['minlength']">
-        City is not long enough</div>
-    </div>
-      </div>
-    </div>
-    
-    <div class="form-floating mb-3">
-       <!-- State -->
-        <select class="form-select" id = "State" 
-        aria-label="Default select example" ngModel name="State">
-            <option selected="selected" value="">State</option>
-            <option *ngFor="let states of getAllStates()" 
+        <div class="alert alert-danger" 
+        *ngIf="streetBox.touched &&!streetBox.valid">
+          <div *ngIf="streetBox.errors?.['required']">
+            Street address is required</div>
+          <div *ngIf="streetBox.errors?.['pattern']">
+            Street address is formatted incorrectly</div>
+          <div *ngIf="streetBox.errors?.['minlength']">
+            Street address must be at least 1 character long</div>
+        </div>
+
+        <div class="form-floating mb-3">
+          <!-- Apt/ Suite -->
+          <input type="text" minlength="2" 
+          maxlength="50" pattern="[a-z0-9A-Z\s]+" 
+          id="aptOrSuiteBox" ngModel
+            name="aptOrSuiteBox" #aptOrSuiteBox="ngModel" 
+            class="form-control" placeholder="aptOrSuiteBox">
+          <label for="aptOrSuiteBox">Apt/Suite/Other</label>
+        </div>
+
+        <div class="alert alert-danger" 
+        *ngIf="aptOrSuiteBox.touched &&!aptOrSuiteBox.valid">
+          <div *ngIf="aptOrSuiteBox.errors?.['pattern']">
+            apt is formatted incorrectly</div>
+          <div *ngIf="aptOrSuiteBox.errors?.['minlength']">
+            apt must be 2 characters</div>
+        </div>
+
+        <div class="row g-2">
+          <div class="col-md">
+            <div class="form-floating mb-3">
+              <!-- zipCodeBox -->
+              <input type="text" required minlength="5" 
+              maxlength="5" pattern="[0-9]+" 
+              id="zipCodeBox" ngModel
+                name="zipCodeBox" #zipCodeBox="ngModel" 
+                class="form-control" 
+                placeholder="zipCodeBox" input type="text">
+              <label for="zipCodeBox">Zip Code
+                <span style="color:red;"> *</span></label>
+            </div>
+
+            <div class="alert alert-danger" 
+            *ngIf="zipCodeBox.touched &&!zipCodeBox.valid">
+              <div *ngIf="zipCodeBox.errors?.['required']">
+                Zip code is required</div>
+              <div *ngIf="zipCodeBox.errors?.['pattern']">
+                Zip must only be numbers</div>
+              <div *ngIf="zipCodeBox.errors?.['minlength']">
+                Zip must be 5 characters</div>
+            </div>
+          </div>
+
+
+          <div class="col-md">
+            <div class="form-floating mb-3">
+              <!-- City -->
+              <input type="text" required 
+              minlength="1" maxlength="50" 
+              pattern="[a-zA-z\s]+" id="cityBox" 
+              ngModel name="cityBox" #cityBox="ngModel" 
+              class="form-control" placeholder="cityBox">
+              <label for="cityBox">
+                City<span style="color:red;"> *
+                </span></label>
+            </div>
+
+            <div class="alert alert-danger" 
+            *ngIf="cityBox.touched &&!cityBox.valid">
+              <div *ngIf="cityBox.errors?.['required']">
+                City is required</div>
+              <div *ngIf="cityBox.errors?.['pattern']">
+                City is formatted wrong</div>
+              <div *ngIf="cityBox.errors?.['minlength']">
+                City must be at least 1 character long</div>
+            </div>
+          </div>
+        </div>
+
+        <div class="form-floating mb-3">
+          <!-- State -->
+          <select class="form-select" 
+          required id="State" 
+          aria-label="Default select example" 
+          ngModel name="state">
+            <option selected="selected" 
+            value="">State</option>
+            <option *ngFor="let states of GetAllStates()" 
             value="{{states}}">{{states}}</option>
           </select>
-    </div>
-    <br>
-    
-    <div class="row justify-content-center">
-    <button type="submit" class="btn btn-primary"
-      [disabled]="!f.valid" onclick="window.location.reload();">
-      Make Purchase</button>
-    </div>
+        </div>
+        <br>
+
+        <div class="row justify-content-center">
+          <button type="submit" class="btn btn-primary" 
+          [disabled]="!f.valid" 
+          onclick="window.location.reload();">
+            Make Purchase</button>
+        </div>
       </form>
 
       <br>
