--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -5,7 +5,7 @@
         <h1>Enter your credit card information</h1>
         <br>
         <div class="form-floating mb-3">
-          <input type="text" required minlength="1"
+          <input type="text" required minlength="2"
            maxlength="255" pattern="[a-zA-Z\s]+" 
            id="cardNameBox" ngModel
             name="cardNameBox" #cardNameBox="ngModel"
@@ -21,7 +21,7 @@
           <div *ngIf="cardNameBox.errors?.['pattern']">
             Name must only be letters</div>
           <div *ngIf="cardNameBox.errors?.['minlength']">
-            Name must be at least 1 character long</div>
+            Name must be at least 2 characters long</div>
         </div>
 
         <div class="form-floating mb-3">
@@ -120,7 +120,7 @@
         <br>
         <div class="form-floating mb-3">
           <!-- Full Name -->
-          <input type="text" required minlength="1" 
+          <input type="text" required minlength="2" 
           maxlength="255" pattern="[a-zA-z\s]+" 
           id="fullNameBox" ngModel
             name="fullNameBox" 
@@ -139,13 +139,13 @@
           <div *ngIf="fullNameBox.errors?.['pattern']">
             Full Name must be letters only</div>
           <div *ngIf="fullNameBox.errors?.['minlength']">
-            Full name must be at least 1 character long</div>
+            Full name must be at least 2 character long</div>
         </div>
 
         <div class="form-floating mb-3">
           <!-- Street Address-->
           <input type="text" required 
-          minlength="1" maxlength="255" 
+          minlength="2" maxlength="255" 
           pattern="[a-zA-Z0-9\s]+" id="streetBox" 
           ngModel name="streetBox" 
           #streetBox="ngModel" class="form-control" 
@@ -162,7 +162,7 @@
           <div *ngIf="streetBox.errors?.['pattern']">
             Street address is formatted incorrectly</div>
           <div *ngIf="streetBox.errors?.['minlength']">
-            Street address must be at least 1 character long</div>
+            Street address must be at least 2 character long</div>
         </div>
 
         <div class="form-floating mb-3">
@@ -178,9 +178,9 @@
         <div class="alert alert-danger" 
         *ngIf="aptOrSuiteBox.touched &&!aptOrSuiteBox.valid">
           <div *ngIf="aptOrSuiteBox.errors?.['pattern']">
-            apt is formatted incorrectly</div>
+            Apt or Suite is formatted incorrectly</div>
           <div *ngIf="aptOrSuiteBox.errors?.['minlength']">
-            apt must be 2 characters</div>
+            Apt or Suite must be 2 characters</div>
         </div>
 
         <div class="row g-2">
@@ -213,7 +213,7 @@
             <div class="form-floating mb-3">
               <!-- City -->
               <input type="text" required 
-              minlength="1" maxlength="50" 
+              minlength="2" maxlength="50" 
               pattern="[a-zA-z\s]+" id="cityBox" 
               ngModel name="cityBox" #cityBox="ngModel" 
               class="form-control" placeholder="cityBox">
@@ -229,7 +229,7 @@
               <div *ngIf="cityBox.errors?.['pattern']">
                 City is formatted wrong</div>
               <div *ngIf="cityBox.errors?.['minlength']">
-                City must be at least 1 character long</div>
+                City must be at least 2 character long</div>
             </div>
           </div>
         </div>
